# SnakeZ

./: CMakeLists.txt
include/: Food.h  PowerUp.h  ScoreBoard.h  Snake.h  defines.h
src/: Food.cpp  PowerUp.cpp  ScoreBoard.cpp  Snake.cpp  main.cpp
